--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Basic SPA</title>
+    <title>Driftly City Comparison</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
